[package]
name = "test"
version = "0.1.0"
edition = "2018"
description = ""
repository = ""
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde_json = { version = "*", features = ["preserve_order"] }
calamine = {path = "./src/lib/calamine"}
base64 = "*"
#calamine = "*"
js-sys = "*"
web-sys = { version = "0.3.50", features = ["FileReader", "FileReaderSync", "Blob", "BlobPropertyBag", "File"]}
wasm-bindgen = { version = "0.2.63",  features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.23"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
